--- a/src/scss/global/_main.scss
+++ b/src/scss/global/_main.scss
@@ -2,4 +2,10 @@
 	grid-area: 3 / main-start / 4 / main-end;
 	margin: auto;
 	width: 100%;
+
+  p,
+  ul,
+  ol {
+    max-inline-size: 50ch;
+  }
 }
